--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- max-width for ultra wide resolutions -->
     <div class="container-fluid" style="max-width: 1400px">
       <div class="row">
-        <aside class="col-lg-3 pb-3">
+        <aside class="col-xl-3 pb-3">
           <h2 id="form-heading" class="mt-1 h3 form-label">
             Search for a City:
           </h2>
@@ -59,7 +59,7 @@
           <div class="list-group" id="history"></div>
         </aside>
 
-        <div class="col-lg-9 pb-3">
+        <div class="col-xl-9 pb-3 today">
           <section
             id="today"
             class="mt-3"
