--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
     <title>Weather Dashboard</title>
   </head>
 
@@ -25,9 +21,9 @@
     </header>
 
     <!-- max-width for ultra wide resolutions -->
-    <div class="container-fluid" style="max-width: 1400px">
+    <div class="container-fluid" style="max-width: auto">
       <div class="row">
-        <aside class="col-xl-3 pb-3">
+        <aside class="col-lg-3">
           <h2 id="form-heading" class="mt-1 h3 form-label">
             Search for a City:
           </h2>
@@ -45,7 +41,7 @@
                 <div class="input-group-append">
                   <button
                     type="submit"
-                    class="btn search-button"
+                    class="btn search-button btn-primary"
                     id="search-button"
                     aria-label="submit search"
                   >
@@ -59,7 +55,7 @@
           <div class="list-group" id="history"></div>
         </aside>
 
-        <div class="col-xl-9 pb-3 today">
+        <div class="col-lg-9 pb-3">
           <section
             id="today"
             class="mt-3"
@@ -79,7 +75,7 @@
     <!-- Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <!-- jQuery -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>
   </body>
 </html>
