--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <!-- max-width for ultra wide resolutions -->
-    <div class="container-fluid" style="max-width: auto">
+    <div class="container-fluid" style="max-width: 1400px">
       <div class="row">
         <aside class="col-lg-3">
           <h2 id="form-heading" class="mt-1 h3 form-label">
