--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             class="row mt-3"
             role="region"
             aria-live="polite"
-          ></section>
+          >
+            <!-- <h2>5-Day Forecast:</h2> -->
+          </section>
         </div>
       </div>
     </div>
